--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,34 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+/* styles.css */
+
+/* Target the scrollbar */
+::-webkit-scrollbar {
+  width: 5px; /* Adjust the width as needed */
+}
+
+/* Track style */
+::-webkit-scrollbar-track {
+  background: transparent; /* Replace with desired color */
+}
+
+/* Handle style */
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(
+    to bottom,
+    rgb(15, 136, 176),
+    rgba(9, 10, 10, 0.663)
+  ); /* Replace with your desired gradient colors */
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(
+    to bottom,
+    rgb(9, 152, 199),
+    rgb(11, 0, 0)
+  ); /* Replace with your desired gradient colors */
+  width: 20px;
+}
