styles: fixed responsive issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,3 +56,8 @@ body {
   ); /* Replace with your desired gradient colors */
   width: 20px;
 }
+
+::selection {
+  background-color: rgb(222, 211, 211);
+  color: rgb(12, 12, 12);
+}
